<resources>
    <string name="app_name">Count</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="my_counters_header">My counters</string>
    <string name="counter_title_placeholder">Counter Title</string>
    <string name="zero">0</string>
    <string name="increment_content_desc">increment</string>
    <string name="decrement_content_desc">decrement</string>
    <string name="last_updated_header">Last updated</string>
    <string name="date_created_header">Date created</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="new_counter_message">Create your new counter</string>
    <string name="counter_title_hint">Counter title</string>
    <string name="counter_initial_value_hint">Initial value for counter, by default 0</string>
    <string name="action_logout">Logout</string>
    <string name="empty_view_text">It feels so empty in here, maybe add some counters?</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
