<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/counter_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/counter_title_placeholder"
        android:textColor="@color/titleTextColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/zero"
        android:textSize="64sp"
        app:layout_constraintStart_toStartOf="@+id/counter_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/counter_title_tv" />

    <ImageButton
        android:id="@+id/increment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/increment_content_desc"
        app:layout_constraintStart_toEndOf="@+id/counter_value_tv"
        app:layout_constraintTop_toTopOf="@+id/counter_value_tv"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/decrement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/decrement_content_desc"
        app:layout_constraintBottom_toBottomOf="@+id/counter_value_tv"
        app:layout_constraintStart_toEndOf="@+id/counter_value_tv"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/last_updated_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/last_updated_header"
        android:textColor="@color/titleTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_updated_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/last_updated_header"
        app:layout_constraintTop_toBottomOf="@+id/last_updated_header" />

    <TextView
        android:id="@+id/date_created_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_created_header"
        android:textColor="@color/titleTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/last_updated_tv"
        app:layout_constraintTop_toBottomOf="@+id/last_updated_tv" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/date_created_header"
        app:layout_constraintTop_toBottomOf="@+id/date_created_header" />

</androidx.constraintlayout.widget.ConstraintLayout>