<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CounterActivity">

    <ImageView
        android:id="@+id/incrementImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:id="@+id/decrementImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/counter_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/counter_title_placeholder"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter_activity_value"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/counter_activity_counter_background"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/zero"
        android:textColor="@color/colorAccent"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/incrementImageView" />

    <TextView
        android:id="@+id/counter_activity_last_updated_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="roboto"
        android:text="@string/last_updated_header"
        android:textColor="@android:color/white"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_activity_value" />

    <TextView
        android:id="@+id/counter_activity_last_updated_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="roboto"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="@dimen/body"
        app:layout_constraintStart_toStartOf="@+id/counter_activity_last_updated_header"
        app:layout_constraintTop_toBottomOf="@+id/counter_activity_last_updated_header" />

    <TextView
        android:id="@+id/counter_activity_creation_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="roboto"
        android:text="@string/date_created_header"
        android:textColor="@android:color/white"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/counter_activity_last_updated_text_view"
        app:layout_constraintTop_toBottomOf="@+id/counter_activity_last_updated_text_view" />

    <TextView
        android:id="@+id/counter_activity_creation_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="roboto"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="@dimen/body"
        app:layout_constraintStart_toStartOf="@+id/counter_activity_creation_date_header"
        app:layout_constraintTop_toBottomOf="@+id/counter_activity_creation_date_header" />

    <Button
        android:id="@+id/counter_activity_increment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button_background"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/counter_activity_value" />

    <Button
        android:id="@+id/counter_activity_decrement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button_background"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/counter_activity_value"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/deleteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/decrementImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageView
        android:id="@+id/edit_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/incrementImageView"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/goalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/zero"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title"
        app:layout_constraintBottom_toTopOf="@+id/counter_activity_value"
        app:layout_constraintEnd_toEndOf="@+id/incrementImageView"
        app:layout_constraintStart_toStartOf="@+id/incrementImageView"
        app:layout_constraintTop_toBottomOf="@+id/goalHeaderTv"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/goalHeaderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Goal:"
        android:textColor="@android:color/white"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/goalTextView"
        app:layout_constraintStart_toStartOf="@+id/goalTextView"
        app:layout_constraintTop_toBottomOf="@+id/counter_activity_title" />

    <TextView
        android:id="@+id/goalStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="goal status"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/subtitle"
        app:layout_constraintEnd_toEndOf="@+id/goalTextView"
        app:layout_constraintStart_toStartOf="@+id/goalTextView"
        app:layout_constraintTop_toBottomOf="@+id/goalTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>